<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.javapai.framework</groupId>
	<artifactId>javapai-framework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>javapai-framework</name>
	<packaging>pom</packaging>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<hibernate-version>4.3.5.Final</hibernate-version>
		<spring-version>5.1.2.RELEASE</spring-version>
		<jackson-version>2.9.3</jackson-version>
		<poi-version>3.14</poi-version>
		<slf4j-version>1.7.21</slf4j-version>
		<httpclient-version>4.5.6</httpclient-version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- Spring-IO -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring-version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring-version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-context</artifactId>
			    <version>${spring-version}</version>
			    <scope>provided</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
			<dependency>
				<!-- 注意：因为很多DTO的验证都依赖这套接口抽象，所以没有设置其scope=provided。 -->
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>2.0.1.Final</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
			<dependency>
				<groupId>org.hibernate.javax.persistence</groupId>
				<artifactId>hibernate-jpa-2.1-api</artifactId>
				<version>1.0.2.Final</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>5.1.3.Final</version>
				<scope>provided</scope>
			</dependency>
	
			<!-- Jackson(排除fastjson,gson) -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson-version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson-version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Netty -->
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>4.0.23.Final</version>
			</dependency>

			<!-- Apache Httpclient -->
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpmime</artifactId>
				<version>${httpclient-version}</version>
			</dependency>
	
			<!-- Apache POI(排除jxl) -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi-version}</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.poi</groupId>
			    <artifactId>poi-scratchpad</artifactId>
			    <version>${poi-version}</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
			<dependency>
			    <groupId>javax.servlet</groupId>
			    <artifactId>javax.servlet-api</artifactId>
			    <version>3.1.0</version>
			    <scope>test</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j-version}</version>
				<!-- 原因：这里日志包只依赖slf4j，不强制外部系统依赖具体实现包(log4j/logback)，具体实现请自行解决依赖问题。 -->
				<scope>provided</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
			<dependency>
			    <groupId>ch.qos.logback</groupId>
			    <artifactId>logback-classic</artifactId>
			    <version>1.2.3</version>
			    <scope>test</scope>
			</dependency>
			
			<!-- Apache Commons -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.3.2</version>
			</dependency>
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>3.2</version>
			</dependency>
			<dependency>
			    <groupId>commons-io</groupId>
			    <artifactId>commons-io</artifactId>
			    <version>2.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.1</version>
			</dependency>
			<dependency>
			    <groupId>commons-beanutils</groupId>
			    <artifactId>commons-beanutils</artifactId>
			    <version>1.9.2</version>
			    <exclusions>
			    	<exclusion>
			    		<groupId>commons-logging</groupId>
			    		<artifactId>commons-logging</artifactId>
			    	</exclusion>
			    </exclusions>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.3.1</version>
			</dependency>
	
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>18.0</version>
				<scope>compile</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
			<dependency>
			    <groupId>org.dom4j</groupId>
			    <artifactId>dom4j</artifactId>
			    <version>2.1.1</version>
			</dependency>

			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>4.6</version>
				<scope>provided</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/junit/junit -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<modules>
		<module>javapai-framework-common</module>
		<module>javapai-framework-core</module>
		<module>javapai-framework-jdbc</module>
		<module>javapai-framework-redis</module>
		<module>javapai-framework-kafka</module>
		<module>javapai-framework-protocol</module>
		<module>javapai-framework-fileparse</module>
		<module>javapai-framework-javafx</module>
		<module>javapai-framework-utils</module>
		<module>javapai-framework-registry</module>
	</modules>
</project>